--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "node-sass": "^4.12.0",
     "nvm": "0.0.4",
     "react": "^16.8.6",
+    "react-alert": "^5.5.0",
+    "react-alert-template-basic": "^1.0.0",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
