--- a/app/Client/package.json
+++ b/app/Client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "formik": "^1.5.7",
     "node-sass": "^4.12.0",
     "nvm": "0.0.4",
     "react": "^16.8.6",
