--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "server.js",
   "scripts": {
     "install": "npm run install:client && npm run install:server",
-    "install:client": "(cd ./client && npm install)",
-    "install:server": "(cd ./server && npm install)",
+    "install:client": "(cd ./Client && npm install)",
+    "install:server": "(cd ./Backend && npm install)",
     "start": "npm run start:dev",
     "start:dev": "npm run start:client & npm run start:server",
     "start:client": "(cd ./client && npm run start)",
-    "start:server": "(cd ./server && npm run start:watch)"
+    "start:server": "(cd ./Backend && npm run start:watch)"
   },
   "author": "",
   "license": "ISC",
