--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-"start":"concurently \"cd Backend && node server.js\" \"cd client && npm start\",
+    "start": "concurrently \"cd Backend && node server.js\" \"cd client && npm start\""
   },
   "author": "",
   "license": "ISC",
