--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
-  "name": "app",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "concurrently \"cd Backend && node server.js\" \"cd client && npm start\""
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "concurrently \"node server.js\" \"cd client && npm start\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^4.1.0"
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongoose": "^5.5.12",
+    "morgan": "^1.9.1",
+    "concurrently": "^4.1.0",
+    "heroku": "^7.25.0"
   }
 }
