--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cli": "^1.0.1",
+    "concurrently": "^4.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "heroku": "^7.25.0",
     "mongoose": "^5.5.12",
-    "morgan": "^1.9.1",
-    "concurrently": "^4.1.0",
-    "heroku": "^7.25.0"
+    "morgan": "^1.9.1"
   }
 }
