--- a/Client/package.json
+++ b/Client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node": "12.1.0",
+    "npm":"6.9.0",
     "axios": "^0.18.0",
     "formik": "^1.5.7",
     "node-sass": "^4.12.0",
@@ -17,7 +19,7 @@
     "typescript": "^3.4.5"
   },
   "engines": {
-    "node": "10.12.0"
+    "node": "12.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
