--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "node": "12.1.0",
+    "npm": "6.9.0",
     "body-parser": "^1.19.0",
     "cli": "^1.0.1",
     "concurrently": "^4.1.0",
