--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
+  "homepage":"Home",
   "main": "server.js",
   "scripts": {
     "server": "nodemon server.js",
