--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
     "server": "nodemon server.js",
     "client-install": "npm install --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"node server.js\" \"cd client && npm start\"",
-    "dev":"concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
-  },
+    "start": "concurrently \"node server.js\" \"cd client && npm start\""
+},
   "author": "",
   "license": "ISC",
   "dependencies": {
