--- a/Client/package.json
+++ b/Client/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "homepage": "https://myapp.com/#/Home",
   "dependencies": {
-    "node": "10.16.0",
-    "npm":"6.9.0",
+    "all": "0.0.0",
     "axios": "^0.18.0",
     "formik": "^1.5.7",
+    "node": "10.16.0",
     "node-sass": "^4.12.0",
+    "npm": "6.9.0",
     "nvm": "0.0.4",
     "react": "^16.8.6",
     "react-alert": "^5.5.0",
