--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "homepage": "Home",
   "main": "server.js",
-  "scripts": {
-    "install-all": "npm install --prefix ./server && npm install --prefix ./client",
-    "postinstall": "npm-run-all \"install-all\" \"build --prefix ./client\"",
+  "scripts": {    
+    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
     "server": "nodemon server.js",
     "client-install": "npm install --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1",
