--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "homepage": "Home",
   "main": "server.js",
   "scripts": {
-    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
-    "server": "nodemon server.js",
+    "heroku-postbuild": "cd client && npm install && npm install --only=dev && npm install && npm run build",
+    "server": "node server.js",
     "client-install": "npm install --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "concurrently \"node server.js\" \"cd client && npm start\""
   },
   "author": "",
   "license": "ISC",
+  "engines":{
+    "node":"10.16.0"
+  },
   "dependencies": {
     "all": "0.0.0",
     "body-parser": "^1.19.0",
