--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "Home",
   "main": "server.js",
   "scripts": {
-    "heroku-postbuild": "cd client && npm install && npm install --only=dev && npm install && npm run build",
+    "heroku-postbuild": "cd ./client && npm install && npm install --only=dev && npm install && npm run build",
     "server": "node server.js",
     "client-install": "npm install --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1",
