--- a/Client/package.json
+++ b/Client/package.json
@@ -3,6 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "https://myapp.com/#/Home",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "DEBUG=none react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "engines": {
+    "node": "10.16.0"
+  },
   "dependencies": {
     "all": "0.0.0",
     "axios": "^0.18.0",
@@ -20,14 +29,9 @@
     "react-scripts": "3.0.1",
     "typescript": "^3.4.5"
   },
-  "engines": {
-    "node": "10.16.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.0"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -43,10 +47,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.0"
   },
   "proxy": "http://localhost3001"
 }
