--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "homepage": "Home",
   "main": "server.js",
   "scripts": {
-    "heroku-postbuild": "cd ./client && npm install && npm install --only=dev && npm install && npm run build",
+    "build": "npm install && cd Client && npm install && npm run build",
     "server": "node server.js",
-    "client-install": "npm install --prefix client",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"node server.js\" \"cd client && npm start\""
+    "test": "echo \"Error: no test specified\"",
+    "start": "DEBUG=* node server.js"
   },
   "author": "",
   "license": "ISC",
